Fri Nov  5 17:08:02 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/mem.c:
	- cleanup

Fri Nov  5 14:10:28 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h: 
	- fix some configuration string and cleanup

Fri Nov  5 09:16:18 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* configure.in: enable some more warnings for gcc compiler

Fri Nov  5 09:05:13 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/mem.c src/tds/token.c:
	- renamed ALIGN_SIZE to TDS_ALIGN_SIZE and moved to tds.h
	- tds_align_struct is now only a type name not a variable

Tue Nov  5 00:30:58 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* src/tds/mem.c src/tds/token.c:
	- Make align_struct static.

Fri Nov  4 22:09:37 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c:
	- remove some warnings

Mon Nov  4 14:45:26 EST 2002	nsc <Nicholas_Castellano@acml.com>
	* include/tds.h include/tdssrv.h src/apps/freebcp.c src/ctlib/cs.c
	  src/ctlib/unittests/common.c src/ctlib/unittests/common.h
	  src/dblib/bcp.c src/dblib/dblib.c src/dblib/unittests/t0007.c
	  src/dblib/unittests/t0013.c src/dblib/unittests/t0014.c
	  src/dblib/unittests/t0016.c src/dblib/unittests/t0017.c
	  src/dblib/unittests/t0019.c src/dblib/unittests/t0021.c
	  src/odbc/convert_sql2string.c src/odbc/convert_sql2string.h
	  src/odbc/odbc.c src/odbc/unittests/common.c src/pool/stream.c
	  src/server/server.c src/tds/config.c src/tds/convert.c
	  src/tds/iconv.c src/tds/numeric.c src/tds/token.c src/tds/vstrbuild.c
	  src/tds/unittests/common.c src/tds/unittests/common.h
	  src/tds/unittests/t0002.c src/tds/unittests/t0004.c
	  src/tds/unittests/t0005.c src/tds/unittests/t0006.c:
	- Use octal character constants instead of hex, for portability.
	- More constification.
	- Fix bug in tds_money_to_string() made apprarent by constification:
	  input argument was being altered (corrupted) during the conversion.
	  Use a temporary copy instead.
