@@ -1,3 +1,6 @@
+Fri Nov  5 20:47:24 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
+	* src/tds/token.c: pad CHAR and BINARY to proper value
+
 Fri Nov  5 17:08:02 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
 	* include/tds.h src/tds/mem.c:
 	- cleanup
